--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,5 @@
     -->
     <title>React App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  
-  </body>
+  <body id="root"></body>
 </html>
